Fix widescreen exhibit nav spacing

--- a/css/sass/_screen_40em_min.scss
+++ b/css/sass/_screen_40em_min.scss
@@ -131,6 +131,7 @@ div#contribution-type-form div.inputs {@include span(last 3);}
         display: block;
         li {
             display: block;
+            padding: 10px;
             padding-left: 30px;
             text-align: left;
             a {
